--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
    <div class="modal" id="modal-box6">
     <h2 class="font">WELCOME!</h2>
     <p class="font1">This site celebrates the best meals around the world!</p>
-    <p class="font1">To get started, click  outside this box. To share your best meal (ever!), click your desired location on the map to post. To explore, filter, search, or hover over the pins.</p>
+    <p class="font1">To get started, click  outside this box. To share your best meal (ever!), click your desired location on the map to post. To explore, filter, search, or hover over the pins to browse the yuminess.</p>
     <p class="font1">Enjoy with great gusto!</p>
    </div>
 
